# dw-inventory-sae

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  config.json.example  config.py  db.py  main.py  pyproject.toml  run_backlog.py  utils.py  wms_client.py
dw_wms_sae/: dbt_project.yml
dw_wms_sae/seeds/: raw_container_status.csv  raw_order_hdr.csv  raw_order_status.csv
extractors/: container.py  container_status.py  inventory.py  location.py  oblpn.py  order_dtl.py  order_hdr.py  order_status.py
sql/: create_raw_container.sql
