[project]
name = "dw-inventory-sae"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Cardoso",email = "cardosopaulohenrique91@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "psycopg[binary]>=3.2.3",
    "tenacity>=9.0.0",
    "dbt-core (>=1.10.13,<2.0.0)",
    "dbt-postgres (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
sqlfluff = "^3.5.0"

